--- a/styles.css
+++ b/styles.css
@@ -522,7 +522,7 @@ body {
 .hero .image{z-index:1;width:100%;display:flex;flex-direction:column;align-items:center;justify-content:flex-start;padding-top:2rem;}
 .hero .image img{width:82vw;margin-left:calc(-41vw + 50%);height:auto;max-height:50vh;border-radius:20px;
                  box-shadow:0 10px 30px rgba(0,0,0,0.5);animation:fadeInRight 2s, glow 2s ease-in-out infinite alternate, float 3s ease-in-out infinite;}
-.huge-download-btn-page{margin-top:1rem;width:82vw;margin-left:calc(-41vw + 50%);padding:2rem 0;animation:bounceIn 1s;}
+.huge-download-btn-page{margin-top:1rem;width:82vw;margin-left:calc(-41vw + 50%);padding:2rem 0;}
 .discord-center {
     padding: 0;
     text-align: center;
